crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-returns_DOC202_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC202_google.py:14:5: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
12 |   # DOC202
13 |   def foo(num: int) -> str:
14 | /     """
15 | |     Do something
16 | |
17 | |     Args:
18 | |         num (int): A number
19 | |
20 | |     Returns:
21 | |         str: A string
22 | |     """
   | |_______^ DOC202 (docstring-extraneous-returns)
23 |       print('test')
   |
   = help: Remove the "Returns" section

DOC202_google.py:30:9: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
28 |       # DOC202
29 |       def foo(self) -> str:
30 | /         """
31 | |         Do something
32 | |
33 | |         Args:
34 | |             num (int): A number
35 | |
36 | |         Returns:
37 | |             str: A string
38 | |         """
   | |___________^ DOC202 (docstring-extraneous-returns)
39 |           print('test')
   |
   = help: Remove the "Returns" section

DOC202_google.py:80:5: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
78 |   # DOC202 -- never explicitly returns anything, just short-circuits
79 |   def foo(s: str, condition: bool):
80 | /     """Fooey things.
81 | |
82 | |     Returns:
83 | |         None
84 | |     """
   | |_______^ DOC202 (docstring-extraneous-returns)
85 |       if not condition:
86 |           return
   |
   = help: Remove the "Returns" section
