crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-returns_DOC202_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC202_numpy.py:16:5: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
14 |   # DOC202
15 |   def foo(num: int) -> str:
16 | /     """
17 | |     Do something
18 | |
19 | |     Parameters
20 | |     ----------
21 | |     num : int
22 | |         A number
23 | |
24 | |     Returns
25 | |     -------
26 | |     str
27 | |         A string
28 | |     """
   | |_______^ DOC202 (docstring-extraneous-returns)
29 |       print('test')
   |
   = help: Remove the "Returns" section

DOC202_numpy.py:36:9: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
34 |       # DOC202
35 |       def foo(self) -> str:
36 | /         """
37 | |         Do something
38 | |
39 | |         Parameters
40 | |         ----------
41 | |         num : int
42 | |             A number
43 | |
44 | |         Returns
45 | |         -------
46 | |         str
47 | |             A string
48 | |         """
   | |___________^ DOC202 (docstring-extraneous-returns)
49 |           print('test')
   |
   = help: Remove the "Returns" section
